--- a/src/components/css/Loading.module.css
+++ b/src/components/css/Loading.module.css
@@ -138,4 +138,16 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 } 
