--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -107,6 +107,11 @@ button:hover {
   transition: background-color 0.3s ease;
 }
 
+.user-info p {
+  font-size: 0.8rem;
+  margin: 0;
+}
+
 .metric-container {
   background-color: var(--user-info-background);
   padding: 20px;
